Time: 117 ms (7.74%), Space: 118 MB (6.16%) - LeetHub